--- a/style.css
+++ b/style.css
@@ -82,4 +82,15 @@ img{
     height: auto;
     border: 5px solid #b5d4eb;
     border-radius: 5px;
+
+}
+h2 {
+  font-family: "Archivo Black", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+h3 {
+  font-family: "Archivo Black", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
