--- a/style.css
+++ b/style.css
@@ -109,4 +109,8 @@ h2 {
     font-variation-settings:
       "wdth" 100;
   }
-  
+    h1 {
+    font-family: "Fjalla One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
